# ova-flus

./: .env.dev.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Finance app requirements.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  docker-compose.dev.yml  package-lock.json  package.json  tsconfig.json
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: cd-android.yml  cd-backend.yml  cd-infrastructure.yml  cd-ios.yml  cd-web.yml  cd.yml  ci.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
apps/android/: README.md  settings.gradle.kts
apps/backend/: .clippy.toml  Cargo.toml
apps/backend/src/: main.rs
apps/backend/src/db/: dynamo.rs
apps/backend/src/handlers/: auth.rs  budgets.rs  goals.rs  mod.rs  plaid.rs  portfolio.rs  profile.rs  stocks.rs  transactions.rs  watchlist.rs
apps/backend/src/middleware/: auth.rs
apps/backend/src/models/: mod.rs
apps/backend/src/tests/: auth_tests.rs  budget_tests.rs  mod.rs
apps/ios/: .sweetpad.json  Package.swift  README.md  project.yml
apps/macos/: Package.swift  README.md
apps/web/: .env.local.example  README.md  middleware.ts  next.config.js  package.json  tailwind.config.ts
backend/: .env.example  package.json  server.js
backend/routes/: auth.routes.js  budget.routes.js  portfolio.routes.js  stock.routes.js  user.routes.js
infrastructure/: README.md  cdk.json  package-lock.json  package.json  tsconfig.json
infrastructure/aws-cdk/: README.md  (+2 more)
mobile/: pubspec.yaml
web/: package.json
(+256 files in other folders)
